# py-webassembly

./: README.md
pyodide/: generate_image.py  index.html  index_lab.html  index_matplot.html  index_org.html
pyodide/_highcharts-poetry/: pyproject.toml  requirements.txt
pyodide/_highcharts-poetry/generate_highcharts_image/: generate_highcharts_image.py
pyodide/_maplot-demo/: pyproject.toml
pyodide/_maplot-demo/_maplot_demo/: __init__.py  line_chart.py
pyodide/_my-matplot/: README.md  setup.py
pyodide/_my-matplot/my_matplot.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
pyodide/_phone-number-validator/: pyproject.toml  requirements.txt
pyodide/_phone-number-validator/phone_number_validator/: validator.py
pyodide/_wheel_poetry/: README.md  README_1st_version.md  build_wheel.sh  pyproject.toml
pyodide/_wheel_poetry/tests/: test_greet.py
pyodide/_wheel_tradition/: README.md  setup.py
pyodide/_wheel_tradition/generate_highcharts_image/: generate_highcharts_image.py
pyodide/_wheel_tradition/generate_highcharts_image.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
pyodide/my-matplot-poetry/: pyproject.toml
pyscript/: README.md  index.html  main.py  pyscript.json
