[tool.poetry]
name = "-highcharts-poetry"
version = "0.1.0"
description = ""
authors = ["cchang62 <thompson292@gmail.com>"]
readme = "README.md"
packages = [{include = "generate_highcharts_image"}]

[tool.poetry.dependencies]
python = "^3.10"
highcharts-core = "^1.10.3"
esprima = "*"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
