[tool.poetry]
name = "maplot-demo"
version = "0.1.0"
description = ""
authors = ["cchang62 <thompson292@gmail.com>"]
readme = "README.md"
packages = [{include = "_maplot_demo"}]

[tool.poetry.dependencies]
python = "^3.10"
matplotlib = "^3.10.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
