[tool.poetry]
name = "phone-number-validator"
version = "0.1.0"
description = ""
authors = ["cchang62 <thompson292@gmail.com>"]
readme = "README.md"
packages = [{include = "phone_number_validator"}]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
