[tool.poetry]
name = "_wheel_poetry"
version = "0.1.0"
description = "A demo Python wheel created with Poetry."
authors = ["Your Name <your.email@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
