[tool.poetry]
name = "my-matplot"
version = "0.1.0"
description = "A Python project for matplotlib utilities"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
matplotlib = "^3.5.0"

[tool.poetry.dev-dependencies]
pytest = "^7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
